# conceptual_critique_evals

./: .gitignore  README.md  argument.txt  pyproject.toml
arguments/: cancer_screening.txt  model_causal_structure.txt  science_funding_returns.txt
dataset/: critiques.jsonl  eval_dataset.jsonl
eval_trajectories/: 20260701T102733Z_opus-4.8_composite.jsonl  20260701T102949Z_haiku-4.5_composite.jsonl  20260701T102949Z_sonnet-4.6_composite.jsonl
generated_critiques/: organization_metrics_20260701_fresh.jsonl
generated_critiques/organization_metrics_20260701_markdown/: index.md  organization_metrics__haiku-4.5__sample-0.md  organization_metrics__haiku-4.5__sample-1.md  organization_metrics__haiku-4.5__sample-2.md  organization_metrics__haiku-4.5__sample-3.md  organization_metrics__opus-4.8__sample-0.md  organization_metrics__opus-4.8__sample-1.md  organization_metrics__opus-4.8__sample-2.md  organization_metrics__opus-4.8__sample-3.md  organization_metrics__sonnet-4.6__sample-0.md  organization_metrics__sonnet-4.6__sample-1.md  organization_metrics__sonnet-4.6__sample-2.md  organization_metrics__sonnet-4.6__sample-3.md
scripts/: build_dataset.py  build_references.py  generate_critiques.py  grader_reproducibility.py  report_plots.py  run_eval.py  style_substance_composite.py
src/critic_evals/: __init__.py  critique.py  dataset.py  eval.py  references.py  schema.py  transcripts.py
src/critic_evals/grading/: calibration.py  centrality.py  charity.py  composite.py  decisiveness.py  derivation.py  fidelity.py  grader.py  (+5 more)
tests/: test_build_dataset.py  test_core.py
(+2 files in other folders)
