[project]
name = "critic-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Corey Hu", email = "corey@coreyhu.com" }
]
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.113.0",
    "markdown>=3.10.2",
    "matplotlib>=3.11.0",
    "numpy>=2.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
